H2 dependency added and configured. Security temporarily disabled

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- In-memory database -->
+		<dependency>
+		    <groupId>com.h2database</groupId>
+		    <artifactId>h2</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
