Java Faker library added. getPolls, getPollById, createPoll Poll Controller methods created. AmountOfQuestions property added to PollResponse DTO. SelectedUserArgumentResolver and registration of it fixed. All methods implemented for PollService and QuestionService. Poll added to dataloader with 4 questions.

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,14 @@
 		    <version>0.12.6</version>
 		    <scope>runtime</scope>
 		</dependency>
+		
+		<!-- Data Faker -->
+		<dependency>
+		    <groupId>com.github.javafaker</groupId>
+		    <artifactId>javafaker</artifactId>
+		    <version>1.0.2</version>
+		</dependency>
+
 
 
 	</dependencies>
