--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+		<dependency>
+	        <groupId>org.springdoc</groupId>
+	        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+	        <version>2.8.5</version>
+  		 </dependency>
+  		 
 		<!-- In-memory database -->
 		<dependency>
 		    <groupId>com.h2database</groupId>
