--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,9 @@ server:
 springdoc:
   swagger-ui:
     defaultModelsExpandDepth: -1	
+logging:
+  level:
+    org:
+      springframework:
+        security:
+          DEBUG
